# asp-optimization-orders

./: .gitignore  README.md  pyproject.toml
asp_optimization_orders/: context.py  encoding.asp  generator.py  greedy.py  main.py  miniznc.py  sample_input.txt  solver.py  utils.py
asp_optimization_orders/encodings/: encoding.asp  encoding1.asp  encoding2.asp  marketplace-1.dzn  marketplace-1.mzn  marketplace-2.dzn  marketplace-2.mzn  marketplace-3.dzn  marketplace-3.mzn
