[tool.poetry]
name = "asp-optimization-orders"
version = "0.1.0"
description = ""
authors = ["Luis Angel <luis.rodriguezreiners@gmail.com>"]
readme = "README.md"
packages = [{include = "asp_optimization_orders"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
dumbo-asp = "^0.3.15"
minizinc = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
